--- a/assets/skeleton.css
+++ b/assets/skeleton.css
@@ -197,8 +197,8 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
-  border-color: #888;
+  color: white;
+  border-color: white;
   outline: 0; }
 .button.button-primary,
 button.button-primary,
