--- a/assets/style.css
+++ b/assets/style.css
@@ -106,3 +106,21 @@ input.button{
     background-color: rgba(249, 79, 12, 0.881);
 }
 
+#restart{
+    background-color: yellowgreen;
+    margin: 2%;
+    border-color: rgb(255, 49, 204);
+    color: rgb(255, 49, 204);
+    transition: .222s;
+    font-weight: bold;
+    font-size: 32px;
+    
+   
+}
+#restart:hover{
+    background-color:rgb(255, 49, 204);
+    border-color: yellowgreen;
+    color: yellowgreen;
+    
+    
+}
